[ARCH-166] fix spacing issue in group nav

--- a/src/js/admin/rl-onboarding/styles/onboarding.scss
+++ b/src/js/admin/rl-onboarding/styles/onboarding.scss
@@ -3287,6 +3287,7 @@ body.bb-rl-fullscreen-mode {
             line-height: 1.3;
             font-weight: 500;
             padding: 6px 16px;
+            margin: 0;
 
             &.bb-rl-preview-group-nav-active {
                 color: var(--bb-rl-preview-text-color);
